--- a/locales/en.yml
+++ b/locales/en.yml
@@ -2,3 +2,4 @@ en:
   brand:
     title: University of Houston Libraries
     welcome_page_title: Finding Aids
+    welcome_head: Welcome to University of Houston Libraries Finding Aids
